# SimpleRSA

./: README.md  pyproject.toml
src/simple_rsa/: __init__.py  rsa_lib.py
tests_rsa/: test_rsa.py
