[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-rsa-tartarus8"
version = "0.1.0"
authors = [
  { name="tartarus8", email="griartemevg@gmail.com" },
]
description = "A fast, lightweight, pure-Python RSA implementation"
readme = "README.md"
requires-python = ">=3.7"
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]
dependencies =[]

[project.urls]
"Homepage" = "https://github.com/tartarus8/SimpleRSA"
"Bug Tracker" = "https://github.com/tartarus8/SimpleRSA/issues"
